# Hayal08_pr-sheriff

./: .pr-sheriff.json  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  action.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  pr-sheriff.yml  publish-pypi.yml
src/pr_sheriff/: __init__.py  cli.py  core.py  detect.py  github.py  presets.py
tests/: test_cli.py  test_core.py  test_detect.py  test_github.py
