[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "pr-sheriff"
version = "0.5.0"
description = "Deterministic pull request risk checks for busy maintainers"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{name = "PR Sheriff contributors"}]
keywords = ["git", "pull-request", "maintainer", "code-review"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Programming Language :: Python :: 3",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Hayal08/pr-sheriff"
Repository = "https://github.com/Hayal08/pr-sheriff"
Issues = "https://github.com/Hayal08/pr-sheriff/issues"
Marketplace = "https://github.com/marketplace/actions/pr-sheriff"

[project.scripts]
pr-sheriff = "pr_sheriff.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
